Fri Nov 25 10:26:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Don't run bug_1535_regression when minimum_corba is enabled.

Fri Nov 25 10:17:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Removed some old info about os-patches, these are gone already for
          some time, also corrected the location of the main define, it is now
          in OS_main.h. As last, changed the references to several files from
          the site of Doug to the local directory. This because of two reasons,
          first there are development teams without internet access (yes, they
          still exist in the world), and the site of Doug always gives the
          latest version, but when using a certain ACE version I want to have
          the documentation of MPC belonging to that version, not with the
          current version, which can be something completely different in
          a few years.

Fri Nov 25 08:57:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Minor updates about Borland and VxWorks versions that are supported

Thu Nov 25 15:45:38 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* bin/tao_other_tests.lst:

	  Added orbsvcs/test/Bug_XXXX_Regression tests to the list.

Thu Nov 25 18:24:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * websvcs/tests/Test_URL_Addr.cpp:
        * performance-tests/SCTP/SOCK_SEQPACK_Association_Test.cpp:
          Use ACE_TMAIN instead of main to fix link errors in the unicode
          builds.

Thu Nov 25 09:25:29 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* bin/tao_other_tests.lst:

	  Added FaultTolerance tests to list.

Thu Nov 25 14:38:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Threads/Guards.cpp:
        * examples/APG/Threads/Message_Blocks.cpp:
          Use ACE_TMAIN instead of main to fix link errors in the unicode